<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:background="@drawable/section_background"
            android:padding="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorAccent"
                android:padding="1dp">
                <ImageView
                    android:id="@+id/summoner_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp">
                <TextView
                    android:id="@+id/summoner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SKT T1 Faker"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/summoner_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NA | Level 30"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/section_background"
            android:layout_marginTop="10dp"
            android:padding="22dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/summoner_wins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wins"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/holo_green_light" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/summoner_win_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100%"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/win_rate"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/text_color_1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/summoner_losses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/losses"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_light" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/section_background"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">
            <ImageView
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:src="@drawable/challenger"
                android:id="@+id/summoner_league_image"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Challenger I"
                    android:id="@+id/summoner_rank"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mama Josh's Bedroom"
                    android:id="@+id/summoner_league_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100LP"
                    android:id="@+id/summoner_lp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/section_background"
            android:layout_marginTop="10dp"
            android:padding="22dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/summoner_champion_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_gravity="center_vertical"
                    android:textSize="28sp"/>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/champion_kills"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:textColor="@color/text_color_1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginLeft="5dp">
                <TextView
                    android:id="@+id/summoner_assists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_gravity="center_vertical"
                    android:textSize="28sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assists"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/text_color_1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginLeft="5dp">
                <TextView
                    android:id="@+id/summoner_turrets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_gravity="center_vertical"
                    android:textSize="28sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turret_kills"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/text_color_1"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>