<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="8dp"
        android:paddingRight="9dp">
        <LinearLayout
            android:id="@+id/compare_layout1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="8dp">
            <LinearLayout
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:background="@color/colorAccent"
                android:padding="1dp">
                <ImageView
                    android:id="@+id/summoner_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <TextView
                android:id="@+id/summoner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SKT T1 Faker"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_gravity="end"/>
            <TextView
                android:id="@+id/summoner_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NA | Level 30"
                android:layout_gravity="end"
                android:layout_marginBottom="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.5"
                    android:gravity="end">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Challenger I"
                        android:id="@+id/summoner_rank"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100LP"
                        android:id="@+id/summoner_lp"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/challenger"
                    android:id="@+id/summoner_league_image"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_wins"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wins"
                android:layout_gravity="end"/>
            <View
                android:id="@+id/summoner_wins_bar"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:layout_gravity="end"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_losses"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/losses"
                android:layout_gravity="end"/>
            <View
                android:id="@+id/summoner_losses_bar"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:layout_gravity="end"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_win_rate"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/win_rate"
                android:layout_gravity="end"/>
            <View
                android:id="@+id/summoner_win_rate_bar"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:layout_gravity="end"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_champion_kills"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/champion_kills2"
                android:layout_gravity="end"/>
            <View
                android:id="@+id/summoner_champion_kills_bar"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:layout_gravity="end"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_assists"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assists2"
                android:layout_gravity="end"/>
            <View
                android:id="@+id/summoner_assists_bar"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:layout_gravity="end"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_turrets"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turret_kills2"
                android:layout_gravity="end"/>
            <View
                android:id="@+id/summoner_turrets_bar"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:layout_gravity="end"
                android:background="@color/colorAccent"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"/>

        <LinearLayout

            android:id="@+id/compare_layout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="8dp">
            <LinearLayout
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@color/colorAccent"
                android:padding="1dp">
                <ImageView
                    android:id="@+id/summoner_icon2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <TextView
                android:id="@+id/summoner_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SKT T1 Faker"
                android:layout_marginTop="10dp"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/summoner_level2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NA | Level 30"
                android:layout_marginBottom="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/challenger"
                    android:id="@+id/summoner_league_image2"
                    android:layout_gravity="center_vertical" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.5">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Challenger I"
                        android:id="@+id/summoner_rank2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100LP"
                        android:id="@+id/summoner_lp2"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_wins2"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wins" />
            <View
                android:id="@+id/summoner_wins_bar2"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_losses2"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/losses" />
            <View
                android:id="@+id/summoner_losses_bar2"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_win_rate2"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/win_rate" />
            <View
                android:id="@+id/summoner_win_rate_bar2"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_champion_kills2"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/champion_kills2" />
            <View
                android:id="@+id/summoner_champion_kills_bar2"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_assists2"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assists2" />
            <View
                android:id="@+id/summoner_assists_bar2"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:background="@color/colorAccent"/>
            <TextView
                android:id="@+id/summoner_turrets2"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turret_kills2" />
            <View
                android:id="@+id/summoner_turrets_bar2"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:background="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>